# vla-distributed-training

./: .env.sample  .gitignore  README.md  learning.md  main.py  paligemma.py  pyproject.toml
infra/: main.tf  providers.tf  variables.tf
pi05/: README.md  datasource.py  flow.md  lerobot_datasource.py  test.ipynb  util.py  vla.ipynb  vla.py  vlav.py
