[project]
name = "vla-distributed-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub[cli,hf-transfer]>=1.9.0",
    "ipywidgets>=8.1.8",
    "lerobot>=0.5.0",
    "python-dotenv>=1.2.2",
    "ray[data,train]>=2.54.1",
    "s3fs>=2026.2.0",
]
